--- a/quisq/main.css
+++ b/quisq/main.css
@@ -318,12 +318,12 @@ a.readmore:hover,a.readmore:focus {
     height:82px;
 }
 #logo a {
-    border:0;
-    margin:0 auto;
-    width:140px;
-    height:82px;
-    display:block;
-    background:transparent url('/images/kiskosprite.png?1305705277') no-repeat -734px 0;
+    background: url("images/logo.png") no-repeat scroll 0 50% transparent;
+    border: 0 none;
+    display: block;
+    height: 82px;
+    margin: 0 auto;
+    width: 200px;
 }
 #hgroup h1 {
     color:#eee;
