--- a/quisq/main.css
+++ b/quisq/main.css
@@ -318,7 +318,7 @@ a.readmore:hover,a.readmore:focus {
     height:82px;
 }
 #logo a {
-    background: url("images/logo.png") no-repeat scroll 0 50% transparent;
+    background: url("images/logo2.png") no-repeat scroll 0 50% transparent;
     border: 0 none;
     display: block;
     height: 82px;
