--- a/quisq/main.css
+++ b/quisq/main.css
@@ -313,15 +313,15 @@ a.readmore:hover,a.readmore:focus {
     background:transparent url('images/lab.jpg') no-repeat fixed 51% 155px;
 }
 #logo {
-    margin-top:88px;
+    margin-top:60px;
     width:100%;
-    height:82px;
+    height:117px;
 }
 #logo a {
     background: url("images/logo5.png") no-repeat scroll 50% 40% transparent;
     border: 0 none;
     display: block;
-    height: 82px;
+    height: 100%;
     margin: 0 auto;
     width: 200px;
 }
