--- a/dev/copticpages/main.css
+++ b/dev/copticpages/main.css
@@ -30,23 +30,73 @@ table {
 
 
 body {
-	font: 75%/1.25 "HelveticaNeue","Helvetica Neue","HelveticaNeueRoman","HelveticaNeue-Roman","Helvetica Neue Roman","TeXGyreHerosRegular","Helvetica","Tahoma","Geneva","Arial",sans-serif;
+	font: 13px/1.231 sans-serif;
+	font-family: lucida grande,lucida sans unicode,lucida sans,sans-serif;
+	background-color: #FAFAFA;
 }
 #wrapper {
-	margin: 0 auto;
-	width: 980px;
+	background-color: white;
 }
+
+#wrapper, #header-wrapper, #footer-wrapper {
+	margin: 0 auto;
+	width: 1020px;
+}
+
+/* HEADER */
+header, footer {
+	/*background: url("./images/body-bg.jpg") repeat scroll 0 0 #222222;*/
+	background-color: black;
+}
+header {
+	border-bottom: 1px solid #C2C2C2;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+	margin-bottom: 15px;
+	height: 42px;
+}
+
+footer {
+	border-top: 1px solid #C2C2C2;
+	margin-top: 15px;
+	height: 42px;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+}
+
+/* NAVIGATION */
+header nav {
+	float: right;
+}
+header nav ul {
+	margin-top: 10px;
+	list-style: none;
+}
+header nav ul li {
+	float: left;
+	margin-left: 10px;
+}
+header nav ul li {
+	font-size: 16px;
+	/*text-transform: uppercase;*/
+}
+header nav ul li a {
+	text-decoration: none;
+	color: white;
+}
+
+
 
 /* SEARCH */
 #search {
 	border: 1px solid #A8A8A8;
 	overflow: hidden;
+	border-radius: 7px;
 }
 #search-params {
-	border-bottom: 1px solid #A8A8A8;
+	background-color: #FFD84F;
+    border-bottom: 1px solid #A8A8A8;
     height: 70px;
-    width: 100%;
     padding: 10px;
+    width: 1000px;
 }
 #search-params section {
 	width: 350px;
@@ -77,7 +127,7 @@ body {
 	position: relative;
 }
 #search-filter-wrapper, #search-filter {
-	width: 237px;
+	width: 277px;
 } 
 #map-options {
 	background: none repeat scroll 0 0 #EEEEE6;
