--- a/dev/copticpages/main.css
+++ b/dev/copticpages/main.css
@@ -44,7 +44,7 @@ body {
 /* HEADER */
 header, footer {
 	/*background: url("./images/body-bg.jpg") repeat scroll 0 0 #222222;*/
-	background-color: black; /*#2B2B2B;*/
+	background-color: #333333; /*#1765A6;*/ /*#2B2B2B;*/
 }
 header {
 	border-bottom: 1px solid #C2C2C2;
@@ -79,13 +79,15 @@ header nav ul li a {
  	color: white;
     font-size: 12px;
     font-weight: bold;
-    padding-bottom: 2px;
+    padding: 5px;
     text-decoration: none;
     text-transform: uppercase;
+    border-radius: 3px;
 }
 header nav ul li a:hover {
 	/*text-decoration: underline;*/
-	border-bottom: 2px solid #555555;
+	/*border-bottom: 2px solid #555555;*/
+	background-color: #4086c0; /*#777777;*/
 }
 
 
@@ -108,7 +110,7 @@ header nav ul li a:hover {
 	width: 1020px;
 }
 #search-params {
-	background-color: #FFD84F;
+	background-color: #E33A2C; /*#FFD84F;*/
     border-bottom: 1px solid #A8A8A8;
     height: 70px;
     padding: 10px;
@@ -125,6 +127,7 @@ header nav ul li a:hover {
 	font-size: 15px;
 	display: inline-block;
 	margin-bottom: 5px;
+	color: White;
 }
 #search-params section input[type=text]{
 	border: 1px solid #A8A8A8;
@@ -132,6 +135,11 @@ header nav ul li a:hover {
     font-size: 20px;
     padding: 5px;
     width: 300px;
+}
+#search-button {
+	top: -2px;
+	color: #204001 !important;
+	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.8);
 }
 #search-body {
 	width: 740px;
