--- a/dev/copticpages/views/profile.html
+++ b/dev/copticpages/views/profile.html
@@ -1,6 +1,7 @@
-<div>
+<div id="profile-view">
 	Something goes here
 </div>
+
 <script id="profile-template" type="text/html">
 	<section class="top">
 	</section>
