--- a/dev/copticpages/main.css
+++ b/dev/copticpages/main.css
@@ -101,6 +101,47 @@ header nav ul li a:hover {
 	height: 65px;
 }
 
+/* HOME */
+#home-view {
+}
+#home-view #search-container {
+	margin: 0 auto;
+	width: 500px;
+	/*background-color: #3862A1;*/
+	/*padding: 15px;*/
+	/*border-radius: 10px;*/
+}
+#home-view #search-container label {
+	/*color: white;*/
+}
+#home-view #search-container section input[type="text"] {
+    color: #3D3D3D;
+    font-size: 20px;
+    padding: 5px;
+}
+#home-view #search-container #search-type {
+	display: block;
+	width: 488px;
+}
+#home-view #search-container > section:first-child label {
+	display: block;
+}
+#home-view #search-container > section, 
+#home-view #search-container > section > section {
+	margin-bottom: 10px;
+}
+#home-view #search-container #search-location {
+	display: block;
+}
+#home-view #search-container #search-button {
+	float: right;
+}
+#home-view #search-container .search-location-section {
+	border: 1px solid blue;
+	padding: 15px 40px;
+}
+
+
 /* SEARCH */
 #search {
 	border: 1px solid #A8A8A8;
