--- a/dev/copticpages/views/search.html
+++ b/dev/copticpages/views/search.html
@@ -7,9 +7,9 @@
 		<section>
 			<label for="search-location">Where are you?</label>
 			<input id="search-location" type="text" />
-			</section>
+		</section>
 		<section>
-			<a id="search-button" class="button-glossy yellow hide_when_printing" href="">Search</a>
+			<a id="search-button" class="button-glossy yellow hide_when_printing" href="#">Search</a>
 			<!--
 			<input id="search-dir" type="checkbox" />
 			<label for="search-dir">Search entire directory</label>
@@ -31,7 +31,6 @@
 	</section>
 </section>
 	
-<!--listitem template-->
 <script id="search-listitem-template" type="text/html">
 	<section class="top">
 	</section>
