--- a/dev/copticpages/views/search.html
+++ b/dev/copticpages/views/search.html
@@ -35,7 +35,7 @@
 	<section class="top">
 	</section>
 	<section class="logo">
-		<a><img src="images/{{img}}" /></a>
+		<a><img src="images/{{thumbnail}}" /></a>
 	</section>
 	<section class="info">
 		<h3>
