--- a/dev/copticpages/views/profile.html
+++ b/dev/copticpages/views/profile.html
@@ -22,7 +22,7 @@
 
 
 <script id="profile-template" type="text/html">
-	<div class="fb-like" data-href="{{profileURL}}" data-send="true" data-width="450" data-show-faces="true"></div>
+	<div class="fb-like" data-href="kiro.me/{{profileName}}" data-send="true" data-width="450" data-show-faces="true"></div>
 	{{#image}}
 	<section class="image">
 		<a><img src="images/{{image}}" /></a>
