--- a/dev/copticpages/main.css
+++ b/dev/copticpages/main.css
@@ -265,6 +265,7 @@ footer {
 #profile-view header h2 {
 	font-size: 35px;
 	display: inline-block;
+	margin-right: 15px;
 }
 #profile-view header .fb-like {
 	display: inline-block;
