--- a/dev/copticpages/main.css
+++ b/dev/copticpages/main.css
@@ -27,37 +27,90 @@ table {
 	border-collapse: collapse;
 	border-spacing: 0;
 }
-
+a {
+	text-decoration: none;s
+}
 
 body {
 	/*font: 13px/1.231 sans-serif;*/
 	/*font-family: lucida grande,lucida sans unicode,lucida sans,sans-serif;*/
-	font: 14px/1.4 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif;
+	background: url("./images/bg-texture.jpg") repeat scroll 0 0 #FFFFFF;
+	font: 12px/1.4 'Helvetica Neue',Arial,'Liberation Sans',FreeSans,sans-serif;
 	background-color: #FAFAFA;
 }
 
-#wrapper, #header-wrapper, #footer-wrapper {
+.wrapper {
 	margin: 0 auto;
 	width: 1020px;
 }
+.banner {
+	background: url("./images/bg-texture.jpg") repeat scroll 0 0 #FFFFFF;
+    border-bottom: 1px solid #D9D9D9;
+    height: 49px;
+    position: relative;
+}
+.pipe {
+    margin: 0 5px;
+}
+
+#background {
+	background-color: white;
+	padding-bottom: 25px;
+	padding-top: 25px;
+}
 
 /* HEADER */
-#site-header, footer {
+#site-header {
 	/*background: url("./images/body-bg.jpg") repeat scroll 0 0 #222222;*/
-	background: url("./images/columns.png") repeat-x scroll 0 0 #1765A6; /*#2B2B2B;*/
+	/*background: url("./images/columns.png") repeat-x scroll 0 0 #1765A6; */
+	background: url("./images/bg-header.jpg") repeat-x scroll center top transparent;
 }
 #site-header {
 	border-bottom: 1px solid #C2C2C2;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
-	margin-bottom: 15px;
-	height: 42px;
+	/*margin-bottom: 15px;
+	height: 42px;*/
+	height: 40px;
 }
-
-footer {
-	border-top: 1px solid #C2C2C2;
-	margin-top: 15px;
-	height: 42px;
-	box-shadow: 0 0 5px rgba(0, 0, 0, 0.4);
+#footer {
+	border-top: 1px solid #D9D9D9;
+    color: #555555;
+    padding: 40px 0 25px;
+}
+#footer nav {
+	width: 280px;
+	margin: 0 auto;
+	height: 100px;
+}
+#footer nav > ul {
+	list-style: none;
+}
+#footer nav > ul > li {
+	float: left;
+	width: 140px;
+}
+#footer nav > ul > li h5 {
+	color: black;
+    font-size: 12px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+#footer a {
+    color: #333333;
+    font-size: 11px;
+    line-height: 1.6em;
+}
+#footer .copyright {
+    color: #777777;
+    font-size: 11px;
+    text-align: center;
+}
+#footer .copyright a {
+    color: #555555;
+    font-size: 11px;
+}
+#footer .pipe {
+    color: #CCCCCC;
 }
 
 /* NAVIGATION */
@@ -65,7 +118,7 @@ footer {
 	float: right;
 }
 #site-header nav ul {
-	margin-top: 10px;
+	margin-top: 12px;
 	list-style: none;
 }
 #site-header nav ul li {
@@ -73,7 +126,7 @@ footer {
 	margin-left: 10px;
 }
 #site-header nav ul li {
-	/*text-transform: uppercase;*/
+	/*text-transform: uppercasez;*/
 }
 #site-header nav ul li a {
  	color: white;
@@ -87,14 +140,12 @@ footer {
 #site-header nav ul li a:hover {
 	/*text-decoration: underline;*/
 	/*border-bottom: 2px solid #555555;*/
-	background-color: rgba(0, 0, 0, 0.3); /*#777777;*/
+	background-color: #FE6D4C;
 }
 
 
 #list-your-space {
-    color: black !important;
     float: right;
-    font-weight: normal;
 }
 
 #action {
@@ -107,6 +158,7 @@ footer {
 #home-view #search-container {
 	margin: 0 auto;
 	width: 500px;
+	height: 300px;
 	/*background-color: #3862A1;*/
 	/*padding: 15px;*/
 	/*border-radius: 10px;*/
@@ -144,14 +196,12 @@ footer {
 
 /* SEARCH */
 #search {
-	border: 1px solid #A8A8A8;
 	overflow: hidden;
 	border-radius: 7px;
 	background-color: white;
 	width: 1020px;
 }
 #search-params {
-	background-color: #3862A1;
     border-bottom: 1px solid #A8A8A8;
     height: 70px;
     padding: 10px;
@@ -168,7 +218,6 @@ footer {
 	font-size: 15px;
 	display: inline-block;
 	margin-bottom: 5px;
-	color: White;
 }
 #search-params section input[type=text]{
 	border: 1px solid #A8A8A8;
@@ -179,8 +228,6 @@ footer {
 }
 #search-button {
 	top: -2px;
-	color: #204001 !important;
-	text-shadow: 0 1px 1px rgba(255, 255, 255, 0.8);
 }
 #search-body {
 	width: 740px;
@@ -205,17 +252,24 @@ footer {
 	line-height: 20px;
     vertical-align: top;
 }
+#map_canvas {
+	width: 279px;
+	height: 300px;
+}
 /* LISTINGS */
 .listings {
 	list-style: none;
 	width: 100%;
 }
 .listing {
-	border-bottom: 1px solid #D8D8D8;
+	border-bottom: 1px solid #EEEEEE;
 	min-height: 92px;
     padding: 10px 0 0;
     position: relative;
     overflow: hidden;
+}
+.listing:hover {
+	background-color: #F9F9F9;
 }
 .listing .logo {
  	float: left;
@@ -234,13 +288,13 @@ footer {
 .listing .info p, 
 .listing .info span, 
 .listing .info a  {
-	line-height: 20px;
+	line-height: 19px;
 }
 .listing .info .catchphrase {
 	font-style: italic;
 }
 .listing .info h3 {
-	font-size: 23px;
+	font-size: 18px;
 	font-weight: bold;
 }
 .listing .info h3 a:link {
@@ -276,4 +330,28 @@ footer {
 }
 #profile-view #fb {
 	height: 30px;
+}
+
+
+
+.btn-blue {
+    background: -moz-linear-gradient(#098DF4, #125CB8) repeat scroll 0 0 #098DF4;
+    border: 1px solid #125CB5;
+    border-radius: 4px 4px 4px 4px;
+    color: #FFFFFF;
+    font-weight: bold;
+    padding: 10px 20px;
+    font-size: 12px;
+}
+.btn-blue:hover {
+    background: -moz-linear-gradient(#0584E7, #125BB3) repeat scroll 0 0 #098DF4;
+    color: #FFFFFF;
+    cursor: pointer;
+    text-decoration: none;
+}
+.btn-blue:active {
+    background: none repeat scroll 0 0 #125CB5;
+    bottom: -1px;
+    position: relative;
+    top: 1px;
 }
