--- a/dev/copticpages/views/search.html
+++ b/dev/copticpages/views/search.html
@@ -1,3 +1,34 @@
+<script>
+	(function () {
+		var js = document.getElementById('google-maps-js');
+		if (js) { 
+			initializeSearchMap();
+			return; 
+		}
+
+		initializeSearchMap = function() {
+			var myLatlng = new google.maps.LatLng(-34.397, 150.644);
+			var myOptions = {
+				zoom: 8,
+				center: myLatlng,
+				mapTypeId: google.maps.MapTypeId.ROADMAP
+			}
+			var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+
+			CP.Location.getCurrentPosition().done(function (position) {
+		        var initialLocation = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
+		        map.setCenter(initialLocation);
+			});
+		}
+
+		var script = document.createElement("script");
+		script.type = "text/javascript";
+		script.id = 'google-maps-js'
+		script.src = "http://maps.googleapis.com/maps/api/js?sensor=false&callback=initializeSearchMap";
+		document.body.appendChild(script);
+	})();
+</script>
+
 <section id="search">
 	<section id="search-params">
 		<section>
@@ -9,7 +40,7 @@
 			<input id="search-location" type="text" />
 		</section>
 		<section>
-			<a id="search-button" class="button-glossy yellow hide_when_printing" href="#">Search</a>
+			<a id="search-button" href="/get/sharing" class="btn-blue">Search</a>
 			<!--
 			<input id="search-dir" type="checkbox" />
 			<label for="search-dir">Search entire directory</label>
@@ -25,7 +56,7 @@
 				<input id="search-map-checkbox" type="checkbox" />
 				<label for="search-map-checkbox">Update results as map moves</label>
 			</section>
-			<section id="map">
+			<section id="map_canvas">
 			</section>
 		</div>
 	</section>
