--- a/dev/copticpages/views/profile.html
+++ b/dev/copticpages/views/profile.html
@@ -30,7 +30,7 @@
 	<section class="info">
 		<header>
 			<h2>{{name}}</h2>
-			<div class="fb-like" data-href="kiro.me/{{profileName}}" data-send="true" data-layout="button_count" data-width="450" data-show-faces="false"></div>
+			<div class="fb-like" data-href="copticpages.com/#/profile/{{profileName}}" data-send="true" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 		</header>
 		<div class="address">
 			<span class="street-address">{{streetAddress}}</span>
